# lab4

./: README.md
.github/workflows/: main.yml
formatter_ex_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: .CMakeLists.txt.swp  CMakeLists.txt
solver_lib/: CMakeLists.txt
